NestedStackSecurityGroupSsh22.yaml
# Exported Stack Output Values vs. Using Nested Stacks:
#   If you have a central resource that is shared between many different other stacks, use <<Exported Stack Output Values>>
#   If you need other stacks to be updated right away if a central resource is updated, use <<Exported Stack Output Values>>
#   If the resources can be dedicated to one stack only and must be re-usable pieces of code, use <<Nested Stacks>>
#   Note: that you will need to update each Root stack manually in case of Nested stack updated

# Nested stacks (best practice) are stacks as part of other stacks, and allow you to isolated repeated patterns/common components in separate stacks and call them from other stacks
# ex. eused Load Balancer configuration, reused Security Group
# always update parent (root stack) for updating a nested stack

# Nested Stacks Update: 
#   1- Ensure the updated nested stacks are uploaded onto S3 first
#   2- Then re-upload your root stack

# Nested Stacks Delete:
#  1-never delete or apply changes to the nested stack
#  2-always do changes from the top-level stack(parent or root stack)

Parameters:
  ParamApplicationName:
    Description: The application name
    Type: String
  ParamVPCId:
    Description: VPC to create the security group into
    Type: AWS::EC2::VPC::Id
  
Resources:
  ResoSecurityGroupSsh22:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub Security group for ${ParamApplicationName}
      SecurityGroupIngress:
        - CidrIp: "10.0.0.0/25"
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          Description: SSH for Engineering department
        - CidrIp: "192.168.0.0/25"
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          Description: SSH for HR department
        - CidrIp: "172.16.0.0/31"
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          Description: Business Partners
      VpcId: !Ref ParamVPCId

Outputs:
  NestedStackOutputResoSecurityGroupSsh22GroupId:
    Value: !Ref ResoSecurityGroupSsh22
    Description: Id for the SSH Security Group
